feat: 🎸 Added logger
